
enum ResultCode
{
	NoError = 0
	GameNotReady
}

struct ServerInfo{
    IP      string
    Port    int32
}


[AutoMsgID Codec:"json" Service: "demo.login"]
struct LoginREQ {
    Version string
	Platform string
	UID string
}


[AutoMsgID Codec:"json"]
struct LoginACK {
	Result ResultCode
	Server ServerInfo
	GameToken string
}


[AutoMsgID Codec:"binary" Service: "demo.game"]
struct VerifyREQ {
	GameToken string
}


[AutoMsgID Codec:"binary"]
struct VerifyACK {
	Result ResultCode
}


[AutoMsgID Codec:"binary" Service: "demo.game"]
struct ChatREQ {
	Content string
}

[AutoMsgID Codec:"binary"]
struct ChatACK{
	Content string
}