// 添加Service属性的消息会在生成接收代码封装,同时加到路由表中

struct ServerInfo{
    IP      string
    Port    int32
}

// client -> agent 客户端Ping
[AutoMsgID Codec:"gogopb"]
struct PingACK {
}


[AutoMsgID Codec:"gogopb" Service: "login"]
struct LoginREQ {
    Version string
	Platform string
	UID string
}


[AutoMsgID Codec:"gogopb"]
struct LoginACK {
	Result ResultCode
	Server ServerInfo
	GameToken string
}


[AutoMsgID Codec:"gogopb" Service: "game" RouteRule: "pass"]
struct VerifyREQ {
	GameToken string
}


[AutoMsgID Codec:"gogopb"]
struct VerifyACK {
	Result ResultCode
}